13561
Failed case:
{code}
$$ scala
Welcome to Scala version 2.7.1.final (Java HotSpot(TM) 64-Bit Server
VM, Java 1.6.0_01-dp).
Type in expressions to have them evaluated.
Type :help for more information.

scala> import scala.collection.mutable.{ HashMap=>MutableHashMap }
import scala.collection.mutable.HashMap=>MutableHashMap

scala> val props = new MutableHashMap[String,String]
<console>:3: error: ';' expected but '=>' found.
import scala.collection.mutable.HashMap=>MutableHashMap;
                                      ^
{code}

There is a mail list thread subject: "import alias failed?"
